add POST /api/v1/magic_auth for having auth jwt token
